--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 					<div class="blog-entry aside-stretch-right">
 						<div class="row">
 							<div class="col-md-12 animate-box">
-								<a href="blog1.html" class="blog-post">
+								<a href="আমার প্রথম সমুদ্র ভ্রমন.html" class="blog-post">
 									<span class="img" style="background-image: url(images/lima_blog.jpg);"></span>
 									<div class="desc">
 										<span class="date">Feb 20, 2021</span>
